k8s/manifests/network-system/traefik/static-routes/brewpiless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brewpiless
  namespace: network-system
spec:
  type: ExternalName

  ports:
    - name: http
      port: 80

  externalName: esp_7de997.lan.
