k8s/manifests/network-system/traefik/static-routes/brewpiless/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brewpiless
  namespace: network-system
  annotations:
    traefik.frontend.passHostHeader: "false"
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: network-system-rfc1918-ips@kubernetescrd
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: "glass-mug-variant"
    hajimari.io/appName: "brewpi"

spec:
  tls:
    - secretName: brewpi-${CLUSTER_NAME}-tls
      hosts:
        - "brewpi.${CLUSTER_DOMAIN}"

  rules:
    - host: brewpi.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brewpiless
                port:
                  number: 80
